# rules_ros2

./: .bazelrc  .pre-commit-config.yaml  MODULE.bazel  WORKSPACE  WORKSPACE.bzlmod  extensions.bzl
.github/workflows/: main.yml
examples/: MODULE.bazel  WORKSPACE
extensions/: extension.bzl
repositories/: asio.BUILD.bazel  foxglove_bridge.BUILD.bazel  repositories.bzl  yaml-cpp.BUILD.bazel
ros2/: interfaces.bzl
ros2/test/diagnostics/: tests.py
