module(name = "com_github_mvukov_rules_ros2")

bazel_dep(name = "bazel_skylib", version = "1.5.0")
bazel_dep(name = "platforms", version = "0.0.8")
bazel_dep(name = "rules_cc", version = "0.0.9")
bazel_dep(name = "rules_foreign_cc", version = "0.10.1")
bazel_dep(name = "rules_python", version = "0.27.1")

python = use_extension("@rules_python//python:extensions.bzl", "python")
python.toolchain(
    is_default = True,
    python_version = "3.11",
)
use_repo(python, "python_versions")

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.whl_mods(
    # Keep this in sync with repositories/pip_annotations.bzl
    additive_build_content = """\
cc_library(
    name = "headers",
    hdrs = glob(["site-packages/numpy/core/include/numpy/**/*.h"]),
    includes = ["site-packages/numpy/core/include"],
    deps = ["@rules_python//python/cc:current_py_cc_headers"],
)
""",
    hub_name = "whl_mods_hub",
    whl_name = "numpy",
)
use_repo(pip, "whl_mods_hub")
pip.parse(
    hub_name = "rules_ros2_pip_deps",
    python_version = "3.11",
    requirements_lock = "//:requirements_lock.txt",
    whl_modifications = {"@whl_mods_hub//:numpy.json": "numpy"},
)
use_repo(pip, "rules_ros2_pip_deps")
use_repo(pip, "rules_ros2_pip_deps_311_numpy")
pip.parse(
    hub_name = "rules_ros2_resolver_deps",
    python_version = "3.11",
    requirements_lock = "//repositories/private:resolver_requirements_lock.txt",
)
use_repo(pip, "rules_ros2_resolver_deps")
